packages/yew-router-macro/tests/routable_derive/invalid-bind-fail.stderr
error: a field can have only one `#[bind(...)]`
 --> $DIR/invalid-bind-fail.rs:5:9
  |
5 | /         #[bind(query)]
6 | |         #[bind(query)]
  | |______________________^
