packages/yew-router-macro/tests/routable_derive/invalid-bind-fail.rs
#[derive(Debug, Clone, PartialEq, yew_router::Routable)]
enum Routes {
    #[at("/")]
    Home {
        #[bind(query)]
        #[bind(query)]
        id: u32
    },
}

fn main() {}
